last phase name change

--- a/blog/templates/blog/about.html
+++ b/blog/templates/blog/about.html
@@ -20,27 +20,8 @@
 </div>
 {% endfor %}-->
 
-<div id="container1" style="min-width: 240px; height: 400px; margin: 0 auto" class="border"></div>
-  <script src="https://code.highcharts.com/highcharts.src.js"></script>
+<!--<div id="container1" style="min-width: 240px; height: 400px; margin: 0 auto" class="border"></div>
+  <script src="https://code.highcharts.com/highcharts.src.js"></script>-->
   
-
-
-  <script>
-    Highcharts.chart('container1', {
-        chart: {
-            type: 'column'
-        },
-        title: {
-            text: 'Historic World Population by Region'
-        },
-        xAxis: {
-            categories: ['Africa', 'America', 'Asia', 'Europe', 'Oceania']
-        },
-        series: [{
-            name: 'Users',
-            data: [107, 31, 635, 203, 222]
-        },]
-    });
-  </script>
 
 {% endblock content %}
