--- a/blog/templates/blog/charts.html
+++ b/blog/templates/blog/charts.html
@@ -8,12 +8,16 @@
     <div class='col-sm-12' url-endpoint='{% url 'api-data' %}'>
 -->
         <canvas id="myChart" width="400" height="400"></canvas>
-<script>
+        <canvas id="myChart2" width="400" height="400"></canvas>
 
+<script>
 var endpoint = '/api/chart/data'
-var defaultData = []
+var defaultData = [];
 var labels1 = [];
 var bgcolor = [];
+var defaultData2 = [];
+var labels2 = [];
+var bgcolor2 = [];
 
 $.ajax({
     method: "GET",
@@ -22,7 +26,11 @@ $.ajax({
         labels1 = data.labels
         defaultData = data.default
         bgcolor = data.bgcolor
+        labels2 = data.labels2
+        defaultData2 = data.defaultviews;
+        bgcolor2 = data.bgcolor2
         setChart()
+        setChart2()
     },
     error: function(error_data){
         console.log("error")
@@ -64,6 +72,39 @@ function setChart(){
     })
 }
 
+function setChart2(){
+    var ctx2 = document.getElementById('myChart2');
+    var myChart2 = new Chart(ctx2, {
+        type: 'bar',
+        data: {
+            labels: labels2,
+            datasets: [{
+                label: '# of Posts',
+                data: defaultData2,
+                backgroundColor: bgcolor2,
+                borderColor: [
+                    'rgba(255, 99, 132, 1)',
+                    'rgba(54, 162, 235, 1)',
+                    'rgba(255, 206, 86, 1)',
+                    'rgba(75, 192, 192, 1)',
+                    'rgba(153, 102, 255, 1)',
+                    'rgba(255, 159, 64, 1)',
+                    'rgba(249,168,37 ,1)',
+                ],
+                borderWidth: 1
+            }]
+        },
+        options: {
+            scales: {
+                yAxes: [{
+                    ticks: {
+                        beginAtZero: true
+                    }
+                }]
+            }
+        }
+    })
+}
 
 /*var ctx = document.getElementById('myChart');
 var myChart = new Chart(ctx, {
